2016-07-25  Jason Merrill  <jason@redhat.com>

	PR c++/65970
	* cp-gimplify.c (genericize_cp_loop): Revert location change.

	PR c++/71837
	* lambda.c (add_capture): Leave a pack expansion in a TREE_LIST.
	(build_lambda_object): Call build_x_compound_expr_from_list.
	* pt.c (tsubst) [DECLTYPE_TYPE]: Likewise.

	PR c++/71833
	PR c++/54440
	* pt.c (coerce_template_parameter_pack): Fix logic for
	pack index.

	PR c++/65970
	* constexpr.c (cxx_eval_loop_expr): Count iterations.
	* cp-gimplify.c (genericize_cp_loop): Use start_locus even for
	infinite loops.

	PR c++/71972
	* constexpr.c (cxx_eval_array_reference): Handle looking for the
	value of an element we're currently modifying.

2016-07-24  Jason Merrill  <jason@redhat.com>

	PR c++/71515
	* pt.c (resolve_typename_type): Try to avoid calling
	currently_open_class.

2016-07-23  Jason Merrill  <jason@redhat.com>

	PR c++/66617
	* call.c (add_list_candidates): Handle VTT parm.
	(build_new_method_call_1): Likewise.

	PR c++/55922
	PR c++/63151
	* init.c (expand_aggr_init_1): Handle list-initialization from {}.

	PR c++/70709
	* class.c (walk_subobject_offsets): Handle 0-length array.

	PR c++/70778
	* pt.c (tsubst): Also substitute into the template of a
	BOUND_TEMPLATE_TEMPLATE_PARM.

	PR c++/71738
	* pt.c (lookup_template_class_1): Handle getting template from tsubst.

	PR c++/71350
	* decl.c (reshape_init_r): Check complain for missing braces warning.

2016-07-22  Jason Merrill  <jason@redhat.com>

	PR c++/71576
	* call.c (convert_like_real): Use lvalue_kind.

	PR c++/71748
	PR c++/52746
	* pt.c (tsubst_baselink): Call
	adjust_result_of_qualified_name_lookup for unqualified
	destructors.

2016-07-21  Jason Merrill  <jason@redhat.com>

	PR c++/69223
	* semantics.c (apply_deduced_return_type): Call
	complete_type_or_else before building the new RESULT_DECL.

	PR c++/71274
	* decl2.c (maybe_instantiate_decl): Split out from mark_used.
	(decl_constant_var_p): Use it instead.

	PR c++/71630